--- a/InoutBoard.Web/InoutBoard.Web/Views/Account/Register.cshtml
+++ b/InoutBoard.Web/InoutBoard.Web/Views/Account/Register.cshtml
@@ -22,13 +22,13 @@
     <div class="control-group">
         @Html.LabelFor(m => m.UserName, "Password", new { @class = "control-label" })
         <div class="controls">
-            @Html.TextBoxFor(m => m.Password, new { id = "Password" })
+            @Html.PasswordFor(m => m.Password, new { id = "Password" })
         </div>
     </div>
     <div class="control-group">
         @Html.LabelFor(m => m.UserName, "Confirm Password", new { @class = "control-label" })
         <div class="controls">
-            @Html.TextBoxFor(m => m.ConfirmPassword, new { id = "ConfirmPassword" })
+            @Html.PasswordFor(m => m.ConfirmPassword, new { id = "ConfirmPassword" })
         </div>
     </div>
     <div class="control-group">
