Restructuring the project.
Currently the SimpleMembership provider is not working.  Need to resolve
this issue.

--- a/InoutBoard.Web/InoutBoard.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/InoutBoard.Web/InoutBoard.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model InoutBoard.Web.Models.RegisterExternalLoginModel
+﻿@model InoutBoard.Core.Models.RegisterExternalLoginModel
 @{
     ViewBag.Title = "Register";
 }
