--- a/InoutBoard.Web/InoutBoard.Web/Views/Account/Manage.cshtml
+++ b/InoutBoard.Web/InoutBoard.Web/Views/Account/Manage.cshtml
@@ -1,4 +1,4 @@
-﻿@model InoutBoard.Web.Models.LocalPasswordModel
+﻿@model InoutBoard.Core.Models.LocalPasswordModel
 @{
     ViewBag.Title = "Manage Account";
 }
