--- a/InoutBoard.Web/InoutBoard.Web/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/InoutBoard.Web/InoutBoard.Web/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model ICollection<InoutBoard.Web.Models.ExternalLogin>
+﻿@model ICollection<InoutBoard.Core.Models.ExternalLogin>
 
 @if (Model.Count > 0)
 {
