--- a/InoutBoard.Web/InoutBoard.Web/Views/Account/_SetPasswordPartial.cshtml
+++ b/InoutBoard.Web/InoutBoard.Web/Views/Account/_SetPasswordPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model InoutBoard.Web.Models.LocalPasswordModel
+﻿@model InoutBoard.Core.Models.LocalPasswordModel
 
 <p>
     You do not have a local password for this site. Add a local
