--- a/InoutBoard.Web/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/InoutBoard.Web/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -5,7 +5,7 @@
     <h3>Registered external logins</h3>
     <table>
         <tbody>
-        @foreach (InoutBoard.Web.Models.ExternalLogin externalLogin in Model)
+        @foreach (InoutBoard.Core.Models.ExternalLogin externalLogin in Model)
         {
             <tr>
                 <td>@externalLogin.ProviderDisplayName</td>
