--- a/InoutBoard.Web/Views/Shared/_Layout.cshtml
+++ b/InoutBoard.Web/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    @Html.ActionLink("Activity Board", "Index", "Home",null, new { @class = "brand" })
+                    @Html.ActionLink("Activity Board", "Index", "Home", null, new { @class = "brand" })
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
@@ -41,6 +41,8 @@
         </div>
     </div>
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/signalr")
+    <script src="/signalr/hubs" type="text/javascript"></script>
     @Scripts.Render("~/bundles/twitter")
     @RenderSection("scripts", required: false)
 </body>
